Fri Apr 10 19:10:34 2015  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (setup_hash): unify common routine.

Fri Apr 10 18:29:49 2015  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_execarg_parent_start1): Handle EINTR.

Fri Apr 10 17:27:58 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c (vm_exec): check other events when RETURN is thrown.
	  [Bug #10724]

	* test/ruby/test_settracefunc.rb: add a test.

Fri Apr 10 11:44:09 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/extconf.rb: check warnings.

	* lib/mkmf.rb (try_cflags): pass options to try_compile.

	* win32/Makefile.sub (WERRORFLAG): make unknown command line
	  options an error.

Fri Apr 10 08:00:17 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_process.rb: unfortunately, windows is not POSIX...
	  cygwin has mkfifo command, but it does not affect system-wide.

Fri Apr 10 02:18:53 2015  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_process.rb: Use mkfifo command instead of mknod
	  command to create a named pipe.  mkfifo command is defined by POSIX.

Fri Apr 10 01:29:05 2015  Tanaka Akira  <akr@fsij.org>

	* process.c: Release GVL when opening a file in spawn() to avoid whole
	  process blocking when opening a named pipe.
	  (open_func): New function.
	  (rb_execarg_parent_start1): Extracted from rb_execarg_parent_start and
	  use rb_thread_call_without_gvl2 to release GVL when opening a file.
	  (rb_execarg_parent_start): Invoke rb_execarg_parent_start1 via
	  rb_protect and invoke rb_execarg_parent_end when error.

Thu Apr  9 22:19:19 2015  Tanaka Akira  <akr@fsij.org>

	* process.c (redirect_open): Removed.

Thu Apr  9 21:38:20 2015  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_execarg_parent_end): Declared.

	* process.c: "spawn" opens files in the parent process.
	  (check_exec_redirect): Add an placeholder for fd in parameters
	  for fd_open.
	  (check_exec_fds_1): Delete fd_open condition.
	  (check_exec_fds): Don't call check_exec_fds_1 with fd_open.