@@ -1,3 +1,7 @@
+Fri Apr 10 19:31:56 2015  Tanaka Akira  <akr@fsij.org>
+
+	* test/ruby/test_file_exhaustive.rb: Test named pipe.
+
 Fri Apr 10 19:10:34 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* ext/objspace/objspace.c (setup_hash): unify common routine.
